--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ COGS lets you specify your information model in plain text. From this model, COG
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-book text-primary sr-icons"></i>
-                        <h3>Rich HTML Documentation</h3>
+                        <h3>Rich Documentation</h3>
                         <p class="text-muted">Make your model clear to your users</p>
                     </div>
                 </div>
