--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ COGS lets you specify your information model in plain text. From this model, COG
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-link text-primary sr-icons"></i>
-                        <h3>UML, OWL 2 RDF, C#, and More</h3>
+                        <h3>GraphQL, UML, OWL 2 RDF, C#, ...</h3>
                         <p class="text-muted">Many more formats and visualizations are available</p>
                     </div>
                 </div>
