--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ COGS lets you specify your information model in plain text. From this model, COG
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Free and Open Source</h2>
                     <hr class="light">
-                    <p class="text-faded">Develop your standard in a simple, transparent way with COGS.</p>
+                    <p class="text-faded">Develop your data model in a simple, transparent way with COGS.</p>
                     <a href="/docs" class="page-scroll btn btn-default btn-xl sr-button">Read the Documentation</a>
                     <a href="http://www.github.com/colectica/cogs" class="page-scroll btn btn-default btn-xl sr-button">Fork on GitHub</a>
                 </div>
