--- a/index.html
+++ b/index.html
@@ -85,7 +85,28 @@ COGS lets you specify your information model in plain text. From this model, COG
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Free and Open Source</h2>
                     <hr class="light">
-                    <p class="text-faded">Develop your data model in a simple, transparent way with COGS.</p>
+
+                    <p class="text-faded">
+                        The Convention-based Ontology Generation System (COGS)
+                        gives you a powerful, patterns-based way to build
+                        ontologies. COGS enables a clean separation of concerns
+                        and gives you full control over markup for enjoyable,
+                        agile development. COGS includes many features that
+                        enable fast, test-driven development for publishing
+                        sophisticated models in a variety of formats.
+                    </p>
+
+                    <p class="text-faded">
+                        COGS is for domain experts and groups who value <strong>ease of collaboration</strong> and
+                        <strong>low technical barriers</strong> for participation.
+                    </p>
+
+                    <p class="text-faded">
+                        Develop your data model in a simple, transparent way
+                        with COGS.
+                    </p>
+
+
                     <a href="/docs" class="page-scroll btn btn-default btn-xl sr-button">Read the Documentation</a>
                     <a href="http://www.github.com/colectica/cogs" class="page-scroll btn btn-default btn-xl sr-button">Fork on GitHub</a>
                 </div>
