--- a/index.html
+++ b/index.html
@@ -171,7 +171,8 @@ COGS lets you specify your information model in plain text. From this model, COG
     <section id="contact">
         <div class="container">
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
+                <div class="col-lg-8 col-lg-offset-2 text-center">                    
+                    <p align="center"><img src="/img/cogs-logo-800.png" alt="cogs"/></p>
                     <h2 class="section-heading">Let's Get In Touch</h2>
                     <hr class="primary">
                     <p>Want to suggest a feature or ask a question? Get in touch using <a href="https://github.com/Colectica/cogs/issues/new">GitHub Issues</a>.</p>
